Fix z-index issue

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -220,12 +220,6 @@ tr.disabled {
   height: 95% !important;
 }
 
-.vl-modal {
-  .vl-modal__backdrop {
-    z-index: 52;
-  }
-}
-
 .vl-modal-dialog__content {
   padding: 2rem 0;
 }
